--- a/course_1/gdm_lab_1_2_experiment_with_n_gram_models.ipynb
+++ b/course_1/gdm_lab_1_2_experiment_with_n_gram_models.ipynb
@@ -182,10 +182,10 @@
     {
       "metadata": {
         "id": "Pa22xutOAiTx",
-        "outputId": "652308a6-faed-4468-f513-dbe82e14346a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "652308a6-faed-4468-f513-dbe82e14346a"
       },
       "cell_type": "code",
       "source": [
@@ -218,10 +218,10 @@
     {
       "metadata": {
         "id": "IRYzvOkxCILc",
-        "outputId": "500fb1f3-f137-4bf5-866a-d33091d8094c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "500fb1f3-f137-4bf5-866a-d33091d8094c"
       },
       "cell_type": "code",
       "source": [
@@ -355,10 +355,10 @@
     {
       "metadata": {
         "id": "mns1I5yzx-kp",
-        "outputId": "7f88f917-e585-4c6b-f5b0-1303e7eb8028",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7f88f917-e585-4c6b-f5b0-1303e7eb8028"
       },
       "cell_type": "code",
       "source": [
@@ -426,10 +426,10 @@
     {
       "metadata": {
         "id": "Xno1DO0sY87o",
-        "outputId": "d8f91b3f-e05b-4cbf-8023-8b4f7dc3d6c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d8f91b3f-e05b-4cbf-8023-8b4f7dc3d6c2"
       },
       "cell_type": "code",
       "source": [
@@ -610,10 +610,10 @@
     {
       "metadata": {
         "id": "IJx9P17ox-kp",
-        "outputId": "e9b2b80a-118d-403b-98c9-6bbc33c13f0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d233250b-29d7-415c-ca5e-9be66bb4c66f"
       },
       "cell_type": "code",
       "source": [
@@ -632,11 +632,20 @@
         "        A list of n-grams, each represented as a list of tokens.\n",
         "    \"\"\"\n",
         "\n",
+        "\n",
+        "\n",
         "    # Tokenize text.\n",
-        "    tokens = ...  # Add your code here.\n",
+        "\n",
+        "    tokens = space_tokenize(text)  # Add your code here.\n",
         "\n",
         "    # Construct the list of n-grams.\n",
         "    ngrams = []\n",
+        "\n",
+        "    for i in range(len(tokens)-n+1):\n",
+        "      gram = tuple(tokens[i:i+n])\n",
+        "      ngrams.append(gram)\n",
+        "\n",
+        "\n",
         "\n",
         "    # Add your code here.\n",
         "\n",
@@ -659,13 +668,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "First 10 Unigrams: []\n",
-            "First 10 Bigrams: []\n",
-            "First 10 Trigrams: []\n"
+            "First 10 Unigrams: [('The',), ('Lagos',), ('air',), ('was',), ('thick',), ('with',), ('humidity,',), ('but',), ('the',), ('energy',)]\n",
+            "First 10 Bigrams: [('The', 'Lagos'), ('Lagos', 'air'), ('air', 'was'), ('was', 'thick'), ('thick', 'with'), ('with', 'humidity,'), ('humidity,', 'but'), ('but', 'the'), ('the', 'energy'), ('energy', 'in')]\n",
+            "First 10 Trigrams: [('The', 'Lagos', 'air'), ('Lagos', 'air', 'was'), ('air', 'was', 'thick'), ('was', 'thick', 'with'), ('thick', 'with', 'humidity,'), ('with', 'humidity,', 'but'), ('humidity,', 'but', 'the'), ('but', 'the', 'energy'), ('the', 'energy', 'in'), ('energy', 'in', 'the')]\n"
           ]
         }
       ],
-      "execution_count": 7
+      "execution_count": 9
     },
     {
       "cell_type": "code",
@@ -675,25 +684,19 @@
       ],
       "metadata": {
         "id": "tlT3xhwcsEtE",
-        "outputId": "aaa07533-6b0c-4dde-d98b-2ff6adc18ada",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 83
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8f358092-5107-46bc-ca5c-473a0e3e61d2"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<h3>❌ Number of n-grams not correct.</h3><p>Your implementation returned a number of n-grams that is not correct. Check your function and run this test again.</p>"
-            ]
-          },
-          "metadata": {}
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Nice! Your implementation looks correct.\n"
+          ]
         }
       ]
     },
@@ -711,7 +714,11 @@
     },
     {
       "metadata": {
-        "id": "2azMP6I4x-kp"
+        "id": "2azMP6I4x-kp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c0be297-079b-43ae-f2a2-08e4baba59df"
       },
       "cell_type": "code",
       "source": [
@@ -732,8 +739,39 @@
         "for trigram, count in trigram_counts.most_common(10):\n",
         "    print(f\"  ({trigram}, {count})\")"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Most common bigrams:\n",
+            "  (('is', 'a'), 144)\n",
+            "  (('of', 'the'), 100)\n",
+            "  (('and', 'the'), 69)\n",
+            "  (('in', 'the'), 61)\n",
+            "  (('with', 'a'), 60)\n",
+            "  (('in', 'a'), 55)\n",
+            "  (('and', 'a'), 50)\n",
+            "  (('to', 'the'), 42)\n",
+            "  (('was', 'a'), 39)\n",
+            "  (('It', 'is'), 33)\n",
+            "\n",
+            "\n",
+            "Most common trigrams:\n",
+            "  (('went', 'looking', 'for'), 32)\n",
+            "  (('a', 'symbol', 'of'), 18)\n",
+            "  (('was', 'hungry', 'so'), 18)\n",
+            "  (('The', 'result', 'is'), 17)\n",
+            "  (('looking', 'for', 'a'), 17)\n",
+            "  (('she', 'went', 'looking'), 16)\n",
+            "  (('he', 'went', 'looking'), 16)\n",
+            "  (('result', 'is', 'a'), 15)\n",
+            "  (('so', 'he', 'went'), 14)\n",
+            "  (('so', 'she', 'went'), 14)\n"
+          ]
+        }
+      ],
+      "execution_count": 11
     },
     {
       "cell_type": "markdown",
@@ -771,7 +809,11 @@
     },
     {
       "metadata": {
-        "id": "VZaL5Lu4x-kp"
+        "id": "VZaL5Lu4x-kp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f1afd43f-019c-4e18-d723-ad0c5216250e"
       },
       "cell_type": "code",
       "source": [
@@ -804,6 +846,8 @@
         "    # https://docs.python.org/3/library/collections.html#collections.Counter and\n",
         "    # https://docs.python.org/3/library/collections.html#collections.defaultdict\n",
         "    # for more information on how to use defaultdict and Counter types.\n",
+        "\n",
+        "    generate_ngrams( dataset, n)\n",
         "    ngram_counts = defaultdict(Counter)\n",
         "\n",
         "    for paragraph in dataset:\n",
@@ -829,8 +873,19 @@
         "    print(f\"  '{context}': {counter},\")\n",
         "print(\"}\")"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bigram counts dictionary:\n",
+            "\n",
+            "{\n",
+            "}\n"
+          ]
+        }
+      ],
+      "execution_count": 13
     },
     {
       "metadata": {
@@ -850,10 +905,28 @@
       ],
       "metadata": {
         "id": "detz3eAXF7AY",
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 83
+        },
+        "outputId": "57bf316f-7e06-42f5-db90-9ab6836063a1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<h3>❌ Returned dictionary of n-gram counts is not correct.</h3><p>Your implementation returned a dictionary of n-gram counts that is not correct. Check your function and run this test again.</p>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "metadata": {
